tests/spec/fail/multi_return_type_mismatch.aja
fuc bad() -> (int, error):
    return 1

bad()
